--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=chrome">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurante DSII</title>
   <link rel="stylesheet" href="css/styles.css">
@@ -36,6 +37,9 @@
                 <a href="#"><img src="img/chicharron.jpg" alt=""> <p>Chicharon</p><span>S/.25.00</span></a>
                 <a href="#"><img src="img/Cuy-al-horno.jpg" alt=""> <p>Cuy al horno</p><span>S/.30.00</span></a>
                 <a href="#"><img src="img/refresco.webp" alt=""> <p>Refrescos</p><span>S/.5.00</span></a>
+                <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas</p><span>S/.6.00</span></a>
+                <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas</p><span>S/.6.00</span></a>
+                <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas</p><span>S/.6.00</span></a>
                 <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas</p><span>S/.6.00</span></a>
             </div>
         </div>
