--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="informacion">
               <h3>Restaurante</h3>
               <h1>Restaurante Desarrollo II</h1>
-              <p>“La mejor comida con platillos variados en nuestro restaurante con los mejores precios ven y disfruta de o mejor de la comida peruana:V.”</p>
+              <p>“La mejor comida con platillos variados en nuestro restaurante con los mejores precios ven y disfruta, lo mejor de la gastronomia peruana :V.”</p>
               <button class="btn">Mas</button>
             </div>
           </main>
