--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
                 <a href="#"><img src="img/chicharron.jpg" alt=""> <p>Chicharon</p><span>S/.25.00</span></a>
                 <a href="#"><img src="img/Cuy-al-horno.jpg" alt=""> <p>Cuy al horno</p><span>S/.30.00</span></a>
                 <a href="#"><img src="img/refresco.webp" alt=""> <p>Refrescos</p><span>S/.5.00</span></a>
-                <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas</p><span>S/.6.00</span></a>
-                <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas</p><span>S/.6.00</span></a>
-                <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas</p><span>S/.6.00</span></a>
-                <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas</p><span>S/.6.00</span></a>
+                <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas</p><span>S/.3.00</span></a>
+                <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas 1L</p><span>S/.6.00</span></a>
+                <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas 2.5L</p><span>S/.12.00</span></a>
             </div>
         </div>
         <div class="der-col">
