--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <section class="section" id="section">
 
-    <div class="caja-productos">
+    <div class="caja-platillos">
 
         <div class="izq-col">
             <h2 class="titulo">Carta</h2>
@@ -37,7 +37,7 @@
                 <a href="#"><img src="img/chicharron.jpg" alt=""> <p>Chicharon</p><span>S/.25.00</span></a>
                 <a href="#"><img src="img/Cuy-al-horno.jpg" alt=""> <p>Cuy al horno</p><span>S/.30.00</span></a>
                 <a href="#"><img src="img/refresco.webp" alt=""> <p>Refrescos</p><span>S/.5.00</span></a>
-                <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas</p><span>S/.3.00</span></a>
+                <a href="#"><img src="img/gaseosa1.jpg" alt=""> <p>Gaseosas</p><span>S/.3.00</span></a>
                 <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas 1L</p><span>S/.6.00</span></a>
                 <a href="#"><img src="img/gaseosa.webp" alt=""> <p>Gaseosas 2.5L</p><span>S/.12.00</span></a>
             </div>
